# thespian

./: .gitignore  COPYRIGHT  Cargo.toml  NOTES.md  README.md
benches/: general.rs
notes/: on_the_implementation_of_atoms.md
src/: actor.rs  lib.rs  link.rs  process.rs  scratchpad.rs
src/design1/: mod.rs  process.rs
src/design2/: mod.rs
src/erl/: atom.rs  mailbox.rs  mod.rs  process.rs
src/next/: fsm.rs  mod.rs  proc.rs
thespian/: Cargo.toml
thespian-bin/: Cargo.toml
thespian-macro/: Cargo.toml
thespian-macro/src/: lib.rs
thespian-rt/: Cargo.toml
thespian-rt/src/: lib.rs  typing.rs
thespian-tui/: Cargo.toml
thespian/src/: actor.rs  field.rs  item.rs  kind.rs  lib.rs  object.rs  stage.rs  ty.rs
thespian/src/reflection/: associated_constant.rs  associated_function.rs  associated_type.rs  mod.rs  trait.rs  type.rs  typed.rs  typing.rs
thespian/src/reflection/typing/std/: primitive.rs
thespian/src/sandbox/: field.rs  kind.rs  mod.rs  object.rs  stage.rs  ty.rs
thespian_bin/: Cargo.toml
thespian_macro/: Cargo.toml
thespian_macro/src/: lib.rs
thespian_rt/: Cargo.toml
thespian_rt/src/: lib.rs
thespian_tui/: Cargo.toml
