[package]
name = "thespian"
version = "0.3.0"
authors = ["David Kern <david@mju.io>"]
edition = "2018"
description = "Asynchronous actor-based concurrency patterns inspired by Erlang."
repository = "https://github.com/davidkern/thespian/"
documentation = "https://docs.rs/thespian/"
license = "MIT OR Apache-2.0"
keywords = ["actor", "async", "concurrency", "tokio"]
categories = ["concurrency"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
criterion = "0.3.3"

[dependencies]
async-task = "4.0.3"
smol = "1.2.5"
thiserror = "1.0.23"

[[bench]]
name = "general"
harness = false
