[package]
name = "thespian"
version = "0.3.0"
authors = ["David Kern <david@mju.io>"]
edition = "2021"
description = "Supervised processes"
repository = "https://github.com/davidkern/thespian/"
documentation = "https://docs.rs/thespian/"
license = "MIT OR Apache-2.0"
keywords = ["concurrency"]
categories = ["concurrency"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dependencies]
slab = "0.4"
